--- a/project.yaml
+++ b/project.yaml
@@ -1513,11 +1513,12 @@ actions:
 
   DWMP_eligible_5yr_data_redact:
     run: r:latest analysis/DWMP_eligibility/DWMP_eligible_redact.R --output-dir=output/data 
-    needs: [DWMP_eligible_5yr_data_2019]
+    needs: [DWMP_eligible_5yr_data]
     outputs:
       moderately_sensitive:
-        table1: output/data/DWMP_eligible_5yr_data_T1DM_2019_redact.csv
-
+        table1: output/data/DWMP_eligible_5yr_data_T1DM_redact.csv
+        table2: output/data/DWMP_eligible_5yr_data_T2DM_redact.csv
+        table3: output/data/DWMP_eligible_5yr_data_hypertension_redact.csv
 
   DWMP_eligible_5yr_data_2019:
     run: r:latest analysis/DWMP_eligibility/DWMP_eligible_2019.R --output-dir=output/data 
