age adjusted rapid change imputation

--- a/project.yaml
+++ b/project.yaml
@@ -1775,3 +1775,12 @@ actions:
     outputs:
       moderately_sensitive:
         table1: output/data/univariate_rapid_weightgain_imputation.csv
+
+
+## age adjusted rapid change models
+  MICE_data_6:
+    run: r:latest analysis/sensitivity_analyses/imp_rapid_delta/MICE_rapid_delta_3.R --output-dir=output/data 
+    needs: [MICE_data_4]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/age_rapid_weightgain_imputation.csv
