--- a/project.yaml
+++ b/project.yaml
@@ -1827,3 +1827,12 @@ actions:
     outputs:
       moderately_sensitive:
         table1: output/data/age_topdecile_imputation.csv
+
+
+## sex adjusted 
+  MICE_data_12:
+    run: r:latest analysis/sensitivity_analyses/imp_top_decile/MICE_top_decile_4.R --output-dir=output/data 
+    needs: [MICE_data_4]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/sex_topdecile_imputation.csv
