--- a/project.yaml
+++ b/project.yaml
@@ -1,7 +1,7 @@
 version: '3.0'
 
 expectations:
-  population_size: 50000
+  population_size: 500000
 
 actions:
 
@@ -1975,4 +1975,14 @@ actions:
     outputs:
       moderately_sensitive:
         table1: output/data/ethnicity_checks.csv
+
+  Ethnicity_correlation_2021:
+    run: r:latest analysis/ethnicity_check/ethnicity_look_up.R --output-dir=output/data 
+    needs: [join_meds]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/eth_16_labels.csv
+        table2: output/data/eth_16_correlation_table_21.csv
+        table3: output/data/eth_6_labels.csv
+        table4: output/data/eth_6_correlation_table_21.csv
 
