change_90th_t2dm_eth_corrected

--- a/project.yaml
+++ b/project.yaml
@@ -2072,6 +2072,13 @@ actions:
       moderately_sensitive:
         table1: output/data/change_90th_eth_ageseximd_models_lowbmiexc_eth_corrected.csv
 
+  Ethnicity_top_decile_change_eth_corrected_t2dm_models:
+    run: r:latest analysis/ethnicity_check/eth_corrected_top_decile_change/eth_corrected_topdecchange_t2dm_models.R --output-dir=output/data 
+    needs: [Ethnicity_top_decile_change_eth_corrected_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/change_90th_t2dm_models_eth_corrected.csv
+
 
 
 
