--- a/project.yaml
+++ b/project.yaml
@@ -2080,7 +2080,12 @@ actions:
         table1: output/data/change_90th_t2dm_models_eth_corrected.csv
 
 
-
+  Ethnicity_top_decile_change_eth_corrected_t2dm_counts:
+    run: r:latest analysis/ethnicity_check/eth_corrected_top_decile_change/eth_corrected_topdecchange_t2dm_counts.R --output-dir=output/data 
+    needs: [Ethnicity_top_decile_change_eth_corrected_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/change_90th_counts_lowbmiexc_eth_corrected_t2dm.csv
 
 
 
