ethnicity adjusted trajectory change models

--- a/project.yaml
+++ b/project.yaml
@@ -2130,5 +2130,12 @@ actions:
         table2: output/data/ethnic_adjusted_lowbmi_excluded_bmi_trajectory_change_T2DM_eth_corrected.csv
 
 
+  Ethnicity_trajectory_change_eth_corrected_ageseximd_models:
+    run: r:latest analysis/ethnicity_check/eth_corrected_trajectory_change/eth_corrected_trajectory_change_models.R --output-dir=output/data 
+    needs: [Ethnicity_top_decile_change_eth_corrected_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/bmi_trajectory_change_eth_corrected_ethnicityageseximd.csv
+        table2: output/data/bmi_trajectory_change_eth_corrected_ethnicityageseximd_T2DM.csv
 
 
