--- a/project.yaml
+++ b/project.yaml
@@ -2077,6 +2077,7 @@ actions:
         table3: output/data/rapid_bmi_change_cancerandlowbmi_removed_eth_corrected_univariate_t2dm.csv
         table4: output/data/rapid_bmi_change_cancerandlowbmi_removed_eth_corrected_popcharac_t2dm.csv
 
+## ETh corrected top decile change
 
   Ethnicity_top_decile_change_eth_corrected_data:
     run: r:latest analysis/ethnicity_check/eth_corrected_top_decile_change/eth_corrected_top_decile_change_data.R --output-dir=output/data 
@@ -2118,6 +2119,14 @@ actions:
     outputs:
       moderately_sensitive:
         table1: output/data/change_90th_counts_lowbmiexc_eth_corrected_t2dm.csv
+
+  Ethnicity_top_decile_change_eth_corrected_t2dm_redact:
+    run: r:latest analysis/ethnicity_check/eth_corrected_top_decile_change/eth_corrected_top_decile_change_t2dm_redact.R --output-dir=output/data 
+    needs: [Ethnicity_top_decile_change_eth_corrected_t2dm_counts, Ethnicity_top_decile_change_eth_corrected_t2dm_models]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/lowbmiexc_eth_corrected_change_90th_counts_t2dm_redact.csv
+        table2: output/data/lowbmiexc_eth_corrected_change_90th_models_t2dm_redact.csv
 
 
 ## Eth Corrected Trajectory Changes
