--- a/project.yaml
+++ b/project.yaml
@@ -2142,11 +2142,12 @@ actions:
 
   Ethnicity_top_decile_traj_change_eth_corrected_t2dm_redact:
     run: r:latest analysis/ethnicity_check/eth_corrected_top_decile_change/eth_corrected_top_decile_change_t2dm_redact.R --output-dir=output/data 
-    needs: [Ethnicity_top_decile_change_eth_corrected_t2dm_counts, Ethnicity_top_decile_change_eth_corrected_t2dm_models, Ethnicity_trajectory_change_eth_corrected_models]
+    needs: [Ethnicity_top_decile_change_eth_corrected_t2dm_counts, Ethnicity_top_decile_change_eth_corrected_t2dm_models, Ethnicity_trajectory_change_eth_corrected_models, Ethnicity_rapid_change_t2dm_models]
     outputs:
       moderately_sensitive:
         table1: output/data/lowbmiexc_eth_corrected_change_90th_counts_t2dm_redact.csv
         table2: output/data/lowbmiexc_eth_corrected_change_90th_models_t2dm_redact.csv
+        table3: output/data/rapid_bmi_change_cancerandlowbmi_removed_eth_corrected_popcharac_t2dm_redact.csv
 
 
 
