--- a/project.yaml
+++ b/project.yaml
@@ -2166,6 +2166,7 @@ actions:
       moderately_sensitive:
         table1: output/data/CC_deltachange_quantiles.csv
 
+
   complete_case_study_pop:
     run: r:latest analysis/ethnicity_check/CC/CC_studypop_charac.R --output-dir=output/data 
     needs: [complete_case_data]
@@ -2173,3 +2174,10 @@ actions:
       moderately_sensitive:
         table1: output/data/CC_study_population_characteristics.csv
 
+
+  complete_delta_summary_stats:
+    run: r:latest analysis/ethnicity_check/CC/CC_delta_summary_stats.R --output-dir=output/data 
+    needs: [complete_case_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/CC_delta_summary_stats.csv
